scrape ok. driver stats almost done

--- a/ToDo
+++ b/ToDo
@@ -1,3 +1,12 @@
-fix scrape profiles
+put teams in driver card
+insert options after you choose a driver
+    check teams
+    estimate next position based on previous results + teams
 
-get teams for current drivers
+refactor code
+
+embelishes presentation
+
+record video
+
+make blog post
