I was finally able to scrape all the results - drivers and teams

--- a/ToDo
+++ b/ToDo
@@ -1,4 +1,6 @@
-put teams in driver card
+scrape teams results to get a ranking for the teams
+    this is going nowhere. I'll use what I got from the drivers
+
 insert options after you choose a driver
     check teams
     estimate next position based on previous results + teams
